correct alignment issues

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .main_title{
-    font-size:55px;
+    font-size:50px;
     text-align: center;
     padding:1%;
     font-family: 'Times New Roman', Times, serif;
@@ -21,7 +21,7 @@
 .graph_title{
     text-align: center;
     padding-top: 2%;
-    font-size: 19px;
+    font-size: 17px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -44,7 +44,7 @@
     margin-top: 2%;
     padding-top: 1%;
     padding-bottom: 1%;
-    font-size: 38px;
+    font-size: 33px;
     font-family: 'Times New Roman', Times, serif;
     margin-left: 10%;
     margin-right: 10%;
@@ -60,16 +60,8 @@
     padding-bottom: 1%;
     text-align: justify;
     align-self: center;
-    font-size: 20px;
+    font-size: 17px;
     font-family: Arial, Helvetica, sans-serif;
-}
-
-#browser_compiled, #search_engine_compiled{
-    width:49%;
-    display:inline-block;
-    margin:auto;
-    text-align: center;
-    padding-bottom: 20%;
 }
 
 #graphs_aggregrate{
@@ -78,8 +70,76 @@
     vertical-align: top;
     padding-top: 1.5%;
     text-align: center;
+    overflow-y: auto;
+}
+
+
+#browser_compiled, #search_engine_compiled{
+    width:50%;
+    float: left;
+    margin:auto;
+    text-align: center;
 }
 
 #desktop_market_share, #search_engine_share{
-    height: 28rem;
+    height: 25rem;
+    width:100%;
+    padding-left: 0;
+    padding-right: 0;
+}
+
+#revenue_title{
+    text-align: center;
+    margin-top: 2%;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    font-size: 38px;
+    font-family: 'Times New Roman', Times, serif;
+    margin-left: 10%;
+    margin-right: 10%;
+    background-color:dodgerblue;
+    font-weight: bold;
+    color:white;
+}
+
+#revenue_content{
+    width:70%;
+    margin:auto;
+    vertical-align: top;
+    padding-top: 1.5%;
+    text-align: center;
+    display:inline-block;
+}
+
+#revenue_graph_aggregrate{
+    margin:auto;
+    vertical-align: top;
+    padding-top: 1.5%;
+    text-align: center;
+    width:100%;
+    padding-bottom: 20%;
+    display:inline-block;
+}
+
+#yearly_revenue_graph{
+    height: 25rem;
+    width: 100%;
+    display:inline-block;
+    
+}
+
+#annotation_growth{
+    width:29.4%;
+    padding-top: 2%;
+    padding-bottom: 1%;
+    text-align: justify;
+    font-size: 17px;
+    font-family: Arial, Helvetica, sans-serif;
+    display:inline-block;
+}
+
+#growth_compiled{
+    padding-left: 10%;
+    padding-right: 10%;
+    text-align: center;
 }
